# sheepy

./: .flake8  .gitignore  README.md  convert.py  ex.py  example.env  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  sheepy.omdbapi.rst  sheepy.rst  sheepy.spreadsheet.rst  sheepy.util.rst
sheepy/: args.py  convert.py  core.py
src/sheepy/: __init__.py  __main__.py  client.py  core.py  spreadsheet.py
src/sheepy/cli/: cli.py
src/sheepy/converter/: convert.py
src/sheepy/model/: movie.py  rating.py
src/sheepy/omdb/: api.py
src/sheepy/omdbapi/: omdb.py
src/sheepy/parser/: clipboard_parser.py
src/sheepy/spreadsheet/: adding.py  formatting.py  sheet_config.py  sheet_util.py  sheet_utils.py  spreadsheet.py
src/sheepy/util/: __init__.py  cli.py  exceptions.py  file.py  logger.py  string_util.py  util.py
src/sheepy_cli/: convert.py  core.py  logger.py  omdb.py  util.py
tests/: test_core.py  test_fileutil.py  test_movie.py  test_omdb.py  test_parser.py  test_rating.py  test_spreadsheet.py  test_util.py
