[build-system]
requires = [
    "flit_core >=3.2,<4",
]
build-backend = "flit_core.buildapi"


[project]
name = "sheepy"
version = "0.0.1"
authors = [{name=  "Jannes Hachmer", email= "jannes.hachmer@gmail.com"}]
description = "add movies to your google spreadsheet"
readme = "README.md"
requires-python = ">3.11"
dependencies = [
    "gspread",
    "gspread-formatting",
    "tabulate",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
    "flake8",
    "flake8-bugbear",
    "pep8-naming",
    "flake8-builtins",
    "flake8-comprehensions",
    "mypy",
    "pytest",
]


[tool.black]
line-length = 88

[tool.ruff]
select = ["ALL"]