[build-system]
requires = [
    "flit_core >=3.2,<4",
]
build-backend = "flit_core.buildapi"


[project]
name = "sheepy"
version = "0.0.4"
authors = [{ name = "Jannes Hachmer", email = "jannes.hachmer@gmail.com" }]
description = "add movies to your google spreadsheet"
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "gspread",
    "gspread-formatting",
    "tabulate",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "mypy",
    "pytest",
    "pytest-mock",
    "sphinx",
    "flit",
]


[tool.black]
line-length = 88

[tool.ruff]
exclude = [".venv", "logs"]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "N", "I", "C90", "B", "C4", "A"]
